--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TinDog</title>
+   <link rel="icon" type="image/icon" href="images/favicon.ico">
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -166,7 +167,7 @@
               <h1 class="card-title pricing-card-title">$29<small class="text-body-secondary fw-light">/mo</small></h1>
               <ul class="list-unstyled mt-3 mb-4">
                 <li>Pirority Listing</li>
-                <li>Unlimited Matches & Messages</li>
+                <li>Unlimited Matches &#38 Messages</li>
                 <li>Unlimited App Usage</li>
               </ul>
               <button type="button" class="w-100 btn btn-lg btn-dark">Contact us</button>
